--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="container">
             <input type="checkbox" id="click">
             <label for="click" class="menu-btn"><i class="fa fa-bars"></i></label>
             <label for="" class="h1">GYM EQUIPMENT</label>
@@ -33,5 +33,15 @@
         </nav>
         
     </header>
+    <main>
+        <div class="container">
+        <section class="top">
+            <div class="greeting">
+                <h2>Welcome</h2>
+                <p>Welcome to the number one source for the best products online. We keep adding products regularly. So do check out our latest offerings.</p>
+            </div>
+        </section>
+        </div>
+    </main>
 </body>
 </html>
