--- a/index.html
+++ b/index.html
@@ -43,5 +43,25 @@
         </section>
         </div>
     </main>
+    <footer>
+        <div class="small_container">
+            <div class="container">
+            <div class="foot">
+            <div class="footer_nav">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <!-- <li><a href="#">Shop</a></li> -->
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">About Us</a></li>
+                </ul>
+            </div>
+            <div class="copyright">
+                Copyright &#169; 2022 <a href="#">Tiny Teq</a> - All Right Reserved
+            </div>
+            </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
