--- a/index.html
+++ b/index.html
@@ -1,91 +1,313 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E-com</title>
-    <link rel="stylesheet" href="text.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body{
+    font-family: 'Noto Sans', sans-serif;
+}
+body a:hover{
+    color: #2E2E7E;
+}
+.container {
+    width: 1200px;
+    max-width: 90%;
+    margin: 0 auto;
+}
+.header{
+    border-bottom: solid 1px #f1f1f1;
+}
+nav .h1{
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 74px;
+    color: #2E2E7E;
+}
+nav  .menu-btn{
+    font-size: 18px;
+    display: none;
+    float: right;
+}
+nav  .menu-btn i{
+    color: #555;
+    cursor: pointer;
+    line-height: 74px;
+}
+nav ul{
+    float: right;
+    cursor: default;
+}
+nav  ul li{
+    display: inline-block;
+    padding: 0;
+    margin: 0;
+    transition: transform 0.5s;
+}
+nav ul li a{
+    line-height: 74px;
+    color: #555;
+    font-weight: 500;
+    text-decoration: none;
+    padding: 0px 15px;
+    font-size: 18px;
+}
+nav ul li:hover{
+    transform: translateY(-5%);
+}
+nav  #click{
+    display: none;
+}
+nav ul li .sub-menu{
+    position: absolute;
+    background: #ffffff;
+    visibility: hidden;
+    width: 150px;
+    border: solid 1px #f1f1f1;
+    border-top: solid 2px #2E2E7E;
+}
+nav ul li .sub-menu li{
+    display: block;
+    border-bottom: solid 1px #f1f1f1;
+    color: #ffffff;
+}
+nav ul li .sub-menu li a{
+    line-height: 40px;
+    font-size: 16px;
+    color: #555;
+    font-weight: 500;
+    text-decoration: none;
+    padding: 0px 15px;
+}
+nav ul li .sub-menu li a:hover{
+    color: #2E2E7E;
+}
 
-</head>
-<body>
-    <header>
-        <div class="top_bar">
-            <div class="container">
-            <div class="head">
-            <div class="header_nav">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                    <li><a href="#">About Us</a></li>
-                </ul>
-            </div>
-            <div class="social_media">
-                <ul>
-                    <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fa fa-youtube-play"></i></a></li>
-                    <li><a href="#"><i class="fa fa-envelope-o"></i></a></li>
-                    <li><a href="#"><i class="fa fa-telegram"></i></a></li>
-                </ul>
-            </div>
-            </div>
-            </div>
-        </div>
-    </header>
-    <div class="header">
-        <nav class="container">
-            <input type="checkbox" id="click">
-            <label for="click" class="menu-btn"><i class="fa fa-bars"></i></label>
-            <label for="" class="h1">GYM EQUIPMENT</label>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Shop</a></li>
-                    <li><a href="#">Account <i class="fa fa-angle-down" id="arrow"></i></a>
-                        <ul class="sub-menu">
-                            <li><a href="#">Login</a></li>
-                            <li><a href="#">Register</a></li>
-                        </ul></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#"><label for="" class="search-btn"><i class="fa fa-search" ></i></label></a></li>
-                </ul>
-            
-        </nav>
-    </div>    
+nav ul li:hover > .sub-menu{
+    visibility: visible;
+}
+nav ul li > a > #arrow:before{
+    font-size: 18px;
+    font-weight: 900;
+}
+nav ul li:hover > a > #arrow:before{
+    content: "\f106";
+}
+/* Main Desiging Start from Here */
     
-    <main>
-        <div class="container">
-        <section class="top">
-            <div class="greeting">
-                <h2>Welcome</h2>
-                <p>Welcome to the number one source for the best products online. We keep adding products regularly. So do check out our latest offerings.</p>
-            </div>
-        </section>
-        </div>
-    </main>
-    <footer>
-        <div class="small_container">
-            <div class="container">
-            <div class="foot">
-            <div class="footer_nav">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <!-- <li><a href="#">Shop</a></li> -->
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                    <li><a href="#">About Us</a></li>
-                </ul>
-            </div>
-            <div class="copyright">
-                Copyright &#169; 2022 <a href="#">Tiny Teq</a> - All Right Reserved
-            </div>
-            </div>
-            </div>
-        </div>
-    </footer>
-</body>
-</html>
+
+main .top .greeting{
+    padding: 10px;
+    margin: 0 25px;
+    text-align: center;
+}
+main .top .greeting h2{
+    font-size: 35px;
+    font-weight: 400;
+    margin: 0 0 20px;
+}
+main .top .greeting p{
+    font-size: 19px;
+    font-weight: 400;
+    margin: 0 0 10px;
+}
+
+/* footer designing on going */
+
+footer .small_container{
+    background: #1b1b1b;
+    padding: 10px 0;
+}
+footer .small_container .foot{
+    display: inline-block;
+    width: 100%;
+    font-size: 12px;
+}
+footer .footer_nav{
+    float: right;
+}
+footer .footer_nav ul{
+    list-style: none;
+    display: inline-block;
+    cursor: default;
+}
+footer .footer_nav ul li{
+    display: inline-block;
+} 
+footer .footer_nav ul li:after{
+    content: '|';
+    color: #ffffff;
+    margin: 0 5px;
+}
+footer .footer_nav ul li:last-child::after{
+    content: '';
+}
+footer .footer_nav ul li a{
+    text-decoration: none;
+    color: #ffffff;
+}
+footer .copyright{
+    display: inline-block;
+    color: #ffffff;
+}
+footer .copyright a{
+    text-decoration: none;
+    color: #ffffff;
+}
+footer .copyright a:hover{
+    color: red;
+}
+
+/* header designing Started */
+
+header .top_bar{
+    background: #1b1b1b;
+    padding: 10px 0;
+}
+header .top_bar .head{
+    display: inline-block;
+    width: 100%;
+    font-size: 12px;
+}
+header .top_bar .head .social_media{
+    float: right;
+}
+header .header_nav{
+    display: inline-block;
+}
+header ul{
+    list-style: none;
+    display: inline-block;
+    cursor: default;
+}
+header ul li{
+    display: inline-block;
+}
+header ul li a{
+    text-decoration: none;
+    color: #ffffff;
+}
+header .header_nav ul li{
+    margin: 0 5px;
+}
+header .header_nav ul li a:hover{
+    color: red;
+}
+
+header .social_media ul li a i{
+    color: #ffffff;
+    font-size: 16px;
+    opacity: 60%;
+}
+header .social_media ul li a i:hover{
+    opacity: 100%;
+}
+header .social_media ul li a{
+    margin: 0 10px;
+}
+
+
+
+
+
+@media(max-width: 840px){
+    nav .menu-btn{
+        display: block;
+    }
+    .header{
+        padding: 0 auto;
+    }
+    nav  ul{
+        width: 100%;
+        left: 0%;
+        position: absolute;   
+        transition: all 0.3 ease;   
+        visibility: hidden; 
+    }
+    nav ul li{
+        display: block;
+        width: 100%;
+        background: #ffffff;
+        border-bottom: solid 1px rgba(85, 85, 85, 0.06);
+    }
+    nav ul li:hover{
+        transform: none;
+    }
+    nav ul li a{
+        line-height: 40px;
+        font-size: 14px;
+        padding: 0 50px;
+    }
+    #click:checked ~ ul{
+    visibility: visible;
+    opacity: 1;
+    }
+    #click:checked ~ .menu-btn i:before{
+        content: "\f00d";
+    }
+    nav ul li .sub-menu{
+        width: 100%;
+        visibility: visible;
+        display: none;
+        position: relative; 
+        transition: all 0.3s ease;  
+        border: none;
+    }
+    nav ul li .sub-menu li{
+        width: 100%;
+        /* padding: 0%; */
+        padding: 0 50px;
+        border: none;
+        background: #F7F7F7;
+        border-bottom: solid 1px rgba(85, 85, 85, 0.06);
+    }
+    nav ul li .sub-menu li a{
+        line-height: 40px;
+        font-size: 14px;
+    }
+    nav ul li:hover > .sub-menu{
+        display: block;
+    }
+
+    /* Main Desiging Start from Here */
+
+    main .top .greeting{
+        margin: 0;
+    }
+    @media(max-width: 270px){
+        nav .h1{
+            line-height: 40px;
+        }
+        nav  .menu-btn i{
+            line-height: 40px;
+        }
+    }
+
+    /* footer design Started */
+
+    footer .foot{
+        text-align: center;
+    }
+
+    footer .footer_nav{
+        float: none;
+        margin-bottom: 15px;
+    }
+
+    /* top header design started */
+
+    header .header_nav{
+        display: none;
+    }
+    header .top_bar .head .social_media{
+        float: none;
+    }
+    header .head{
+        text-align: center;
+    }
+    @media(max-width: 570px){
+        header{
+            display: none;
+        }
+    }
+}
+
